--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -28,7 +28,7 @@
 <h1>Data Locality</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Optimization Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
-<p><em>Speed memory access by arranging data to take advantage of CPU caching.</em></p>
+<p><em>Accelerate memory access by arranging data to take advantage of CPU caching.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
 <p>We&#8217;ve been lied to. They keep showing us charts where CPU speed goes up and up every year as if Moore&#8217;s Law isn&#8217;t just a historical observation but some kind of divine right. Without lifting a finger, we software folks watch our programs magically accelerate just by virtue of new hardware.</p>
 <p>Chips <em>have</em> been getting faster (though even that&#8217;s plateauing now), but the hardware heads failed to mention something. Sure, we can <em>process</em> data faster than ever, but we can&#8217;t <em>get</em> that data faster.</p>
@@ -37,8 +37,8 @@
 <aside name="legend">
 
 <p>Processor and RAM speed relative to their respective speeds in 1980. As you can see, CPUs have grown in leaps and bounds, but RAM access is lagging far behind.</p>
-<p>Data for this is from &#8220;Computer architecture: a quantitative approach&#8221;
-by John L. Hennessy, David A. Patterson, Andrea C. Arpaci-Dusseau by way of Tony Albrecht&#8217;s &#8220;<a href="http://research.scee.net/files/presentations/gcapaustralia09/Pitfalls_of_Object_Oriented_Programming_GCAP_09.pdf">Pitfalls of Object-Oriented Programming</a>&#8220;.</p>
+<p>Data for this is from <em>Computer Architecture: A Quantitative Approach</em>
+by John L. Hennessy, David A. Patterson, Andrea C. Arpaci-Dusseau by way of Tony Albrecht&#8217;s &#8220;<a href="http://research.scee.net/files/presentations/gcapaustralia09/Pitfalls_of_Object_Oriented_Programming_GCAP_09.pdf">Pitfalls of Object-Oriented Programming</a>&rdquo;.</p>
 </aside>
 
 <p>For your super-fast CPU to blow through a ream of calculations, it actually has to get the data out of main memory and into registers. As you can see, RAM hasn&#8217;t been keeping up with increasing CPU speeds. Not even close.</p>
@@ -46,7 +46,7 @@ by John L. Hennessy, David A. Patterson, Andrea C. Arpaci-Dusseau by way of Tony
 <p>Actually, they <em>are</em> stuck waiting on memory an astonishingly large fraction of time these days, but it&#8217;s not as bad as it could be. To explain how, let&#8217;s take a trip to the Land of Overly Long Analogies&#8230;</p>
 <aside name="ram">
 
-<p>It&#8217;s called &#8220;Random access memory&#8221; because, unlike disc drives, you can theoretically access any piece of it as quick as any other. You don&#8217;t have to worry about reading things consecutively like you do a disc.</p>
+<p>It&#8217;s called &#8220;random access memory&#8221; because, unlike disc drives, you can theoretically access any piece of it as quick as any other. You don&#8217;t have to worry about reading things consecutively like you do a disc.</p>
 <p>Or, at least, you <em>didn&#8217;t</em>. As we&#8217;ll see, RAM isn&#8217;t so random access anymore.</p>
 </aside>
 
@@ -119,7 +119,7 @@ some more boxes that are next to it. He doesn&#8217;t know if you want those (an
 <p>Your mileage will vary.</p>
 </aside>
 
-<p>This was a real eye-opener to me. I&#8217;m used to thinking of performance being an aspect of <em>code</em> not <em>data</em>. A byte isn&#8217;t slow or fast, it&#8217;s just some static thing sitting there. But, because of caching, <em>the way you organize data directly impacts performance.</em></p>
+<p>This was a real eye-opener to me. I&#8217;m used to thinking of performance being an aspect of <em>code</em>, not <em>data</em>. A byte isn&#8217;t slow or fast, it&#8217;s just some static thing sitting there. But, because of caching, <em>the way you organize data directly impacts performance.</em></p>
 <p>The challenge now is to wrap that up into something that fits into a chapter here. Optimization for cache usage is a huge topic. I haven&#8217;t even touched on <em>instruction caching</em>. Remember, code is in memory too and has to be loaded onto the CPU before it can be executed. Someone more versed on the subject could write an entire <span name="book">book</span> on it.</p>
 <aside name="book">
 
@@ -133,7 +133,8 @@ some more boxes that are next to it. He doesn&#8217;t know if you want those (an
 <p>There&#8217;s a key assumption here, though: one thread. If you are modifying nearby data on multiple threads, it&#8217;s faster to have it on <em>different</em> cache lines. If two threads try to tweak data on the same cache line, both cores have to do some costly synchronization of their caches.</p>
 </aside>
 
-<p>In other words, if your code is crunching on <code>Thing</code> then <code>Another</code> then <code>Also</code>, you want them laid out in memory like this:</p>
+<p>In other words, if your code is crunching on <code>Thing</code>, then <code>Another</code>, then
+<code>Also</code>, you want them laid out in memory like this:</p>
 <p><img src="images/data-locality-things.png" /></p>
 <p>Note, these aren&#8217;t <em>pointers</em> to <code>Thing</code>, <code>Another</code>, and <code>Also</code>. This is the actual data for them, in place, lined up one after the other. As soon as the CPU reads in <code>Thing</code>, it will start to get <code>Another</code> and <code>Also</code> too (depending on how big they are and how big a cache line is). When you start working on them next, they&#8217;ll already be cached. Your chip is happy and you&#8217;re happy.</p>
 <h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
@@ -172,14 +173,14 @@ some more boxes that are next to it. He doesn&#8217;t know if you want those (an
   <span class="o">:</span> <span class="n">ai_</span><span class="p">(</span><span class="n">ai</span><span class="p">),</span> <span class="n">physics_</span><span class="p">(</span><span class="n">physics</span><span class="p">),</span> <span class="n">render_</span><span class="p">(</span><span class="n">render</span><span class="p">)</span>
   <span class="p">{}</span>
 
-  <span class="n">AIComponent</span><span class="o">*</span>      <span class="n">ai</span><span class="p">()</span>      <span class="p">{</span> <span class="k">return</span> <span class="n">ai_</span><span class="p">;</span> <span class="p">}</span>
+  <span class="n">AIComponent</span><span class="o">*</span> <span class="n">ai</span><span class="p">()</span> <span class="p">{</span> <span class="k">return</span> <span class="n">ai_</span><span class="p">;</span> <span class="p">}</span>
   <span class="n">PhysicsComponent</span><span class="o">*</span> <span class="n">physics</span><span class="p">()</span> <span class="p">{</span> <span class="k">return</span> <span class="n">physics_</span><span class="p">;</span> <span class="p">}</span>
-  <span class="n">RenderComponent</span><span class="o">*</span>  <span class="n">render</span><span class="p">()</span>  <span class="p">{</span> <span class="k">return</span> <span class="n">render_</span><span class="p">;</span> <span class="p">}</span>
+  <span class="n">RenderComponent</span><span class="o">*</span> <span class="n">render</span><span class="p">()</span> <span class="p">{</span> <span class="k">return</span> <span class="n">render_</span><span class="p">;</span> <span class="p">}</span>
 
 <span class="nl">private:</span>
-  <span class="n">AIComponent</span><span class="o">*</span>      <span class="n">ai_</span><span class="p">;</span>
+  <span class="n">AIComponent</span><span class="o">*</span> <span class="n">ai_</span><span class="p">;</span>
   <span class="n">PhysicsComponent</span><span class="o">*</span> <span class="n">physics_</span><span class="p">;</span>
-  <span class="n">RenderComponent</span><span class="o">*</span>  <span class="n">render_</span><span class="p">;</span>
+  <span class="n">RenderComponent</span><span class="o">*</span> <span class="n">render_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
 
@@ -361,11 +362,15 @@ organized.</p>
 <span class="k">class</span> <span class="nc">ParticleSystem</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
+  <span class="n">ParticleSystem</span><span class="p">()</span>
+  <span class="o">:</span> <span class="n">numParticles_</span><span class="p">(</span><span class="mi">0</span><span class="p">)</span>
+  <span class="p">{}</span>
+
   <span class="kt">void</span> <span class="n">update</span><span class="p">();</span>
 <span class="nl">private:</span>
   <span class="k">static</span> <span class="k">const</span> <span class="kt">int</span> <span class="n">MAX_PARTICLES</span> <span class="o">=</span> <span class="mi">100000</span><span class="p">;</span>
 
-  <span class="kt">int</span> <span class="n">numParticles_</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span>
+  <span class="kt">int</span> <span class="n">numParticles_</span><span class="p">;</span>
   <span class="n">Particle</span> <span class="n">particles_</span><span class="p">[</span><span class="n">MAX_PARTICLES</span><span class="p">];</span>
 <span class="p">};</span>
 </pre></div>
@@ -398,7 +403,7 @@ organized.</p>
 <p>Having objects in a contiguous array doesn&#8217;t solve much if the objects we&#8217;re actually processing aren&#8217;t contiguous in it. If it&#8217;s littered with inactive objects we have to dance around, we&#8217;re right back to the original problem.</p>
 <aside name="branch">
 
-<p>Savvy low-level coders can see another problem here. Doing an <code>if</code> check for every particle can cause a <em>branch misprediction</em> and a <em>pipeline stall</em>. In modern CPUs a single &#8220;instruction&#8221; actually takes several clock cycles. To keep the CPU busy, instructions are <em>pipelined</em> so that the subsequent instructions start processing before the first one finishes.</p>
+<p>Savvy low-level coders can see another problem here. Doing an <code>if</code> check for every particle can cause a <em>branch misprediction</em> and a <em>pipeline stall</em>. In modern CPUs, a single &#8220;instruction&#8221; actually takes several clock cycles. To keep the CPU busy, instructions are <em>pipelined</em> so that the subsequent instructions start processing before the first one finishes.</p>
 <p>To do that, the CPU has to guess which instructions it will be executing next. In straight line code, that&#8217;s easy, but with flow control, it&#8217;s harder. While it&#8217;s executing the instructions for that <code>if</code>, does it guess that the particle is active and start executing the code for the <code>update()</code> call, or does it guess that it isn&#8217;t?</p>
 <p>To answer that, the chip does <em>branch prediction:</em> it sees which branches your code previously took and guesses that it will do that again. But when the loop is constantly toggling between particles that are and aren&#8217;t active, that prediction fails.</p>
 <p>When it does, the CPU has to ditch the instructions it had started speculatively processing (a <em>pipeline flush</em>) and start over. The performance impact of this varies widely by machine, but this is why you sometimes see developers avoid flow control in hot code.</p>
@@ -469,8 +474,8 @@ organized.</p>
 
 <span class="nl">private:</span>
   <span class="n">Animation</span><span class="o">*</span> <span class="n">animation_</span><span class="p">;</span>
-  <span class="kt">double</span>     <span class="n">energy_</span><span class="p">;</span>
-  <span class="n">Vector</span>     <span class="n">goalPos_</span><span class="p">;</span>
+  <span class="kt">double</span> <span class="n">energy_</span><span class="p">;</span>
+  <span class="n">Vector</span> <span class="n">goalPos_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
 
@@ -484,9 +489,9 @@ organized.</p>
 <span class="nl">private:</span>
   <span class="c1">// Previous fields...</span>
   <span class="n">LootType</span> <span class="n">drop_</span><span class="p">;</span>
-  <span class="kt">int</span>      <span class="n">minDrops_</span><span class="p">;</span>
-  <span class="kt">int</span>      <span class="n">maxDrops_</span><span class="p">;</span>
-  <span class="kt">double</span>   <span class="n">chanceOfDrop_</span><span class="p">;</span>
+  <span class="kt">int</span> <span class="n">minDrops_</span><span class="p">;</span>
+  <span class="kt">int</span> <span class="n">maxDrops_</span><span class="p">;</span>
+  <span class="kt">double</span> <span class="n">chanceOfDrop_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
 
@@ -499,11 +504,11 @@ organized.</p>
 <span class="nl">public:</span>
   <span class="c1">// Methods...</span>
 <span class="nl">private:</span>
-  <span class="n">Animation</span><span class="o">*</span>   <span class="n">animation_</span><span class="p">;</span>
-  <span class="kt">double</span>       <span class="n">energy_</span><span class="p">;</span>
-  <span class="n">Vector</span>       <span class="n">goalPos_</span><span class="p">;</span>
+  <span class="n">Animation</span><span class="o">*</span> <span class="n">animation_</span><span class="p">;</span>
+  <span class="kt">double</span> <span class="n">energy_</span><span class="p">;</span>
+  <span class="n">Vector</span> <span class="n">goalPos_</span><span class="p">;</span>
 
-  <span class="n">LootDrop</span><span class="o">*</span>    <span class="n">loot_</span><span class="p">;</span>
+  <span class="n">LootDrop</span><span class="o">*</span> <span class="n">loot_</span><span class="p">;</span>
 <span class="p">};</span>
 
 <span class="k">class</span> <span class="nc">LootDrop</span>
