--- a/html/optimization-patterns.html
+++ b/html/optimization-patterns.html
@@ -27,9 +27,22 @@
 <div class="content">
 <h1>Optimization Patterns</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
-<p>While the rising tide of faster and faster hardware has lifted most software above worrying about performance, games are one of the few remaining exceptions. Players always want richer, more realistic and exciting experiences. Screens are crowded with games vying for a player&#8217;s attention&#8202;&mdash;&#8202;and cash!&#8202;&mdash;&#8202;and the game that pushes the hardware the farthest often wins.</p>
-<p>Optimizing for performance is a deep art that touches all aspects of software. Low-level coders master the myriad idiosyncracies of hardware architectures. Meanwhile, algorithms researchers compete to prove mathematically whose procedure is the most efficient.</p>
-<p>Here, I touch on a few mid-level patterns that are often used to speed up a game. <a href="data-locality.html">Data Locality</a> introduces you to the modern computer&#8217;s memory hierarchy and how you can use it to your advantage. The <a href="dirty-flag.html">Dirty Flag</a> pattern helps you avoid unnecessary computation while <a href="object-pool.html">Object Pools</a> help you avoid unnecessary allocation. <a href="spatial-partition.html">Spatial Partitioning</a> speeds up the virtual world and its inhabitants&#8217; arrangement in space.</p>
+<p>While the rising tide of faster and faster hardware has lifted most software
+above worrying about performance, games are one of the few remaining exceptions.
+Players always want richer, more realistic and exciting experiences. Screens are
+crowded with games vying for a player&#8217;s attention&#8202;&mdash;&#8202;and cash!&#8202;&mdash;&#8202;and the game
+that pushes the hardware the farthest often wins.</p>
+<p>Optimizing for performance is a deep art that touches all aspects of software.
+Low-level coders master the myriad idiosyncracies of hardware architectures.
+Meanwhile, algorithms researchers compete to prove mathematically whose
+procedure is the most efficient.</p>
+<p>Here, I touch on a few mid-level patterns that are often used to speed up a
+game. <a href="data-locality.html">Data Locality</a> introduces you to the modern
+computer&#8217;s memory hierarchy and how you can use it to your advantage. The <a href="dirty-flag.html">Dirty
+Flag</a> pattern helps you avoid unnecessary computation while
+<a href="object-pool.html">Object Pools</a> help you avoid unnecessary allocation. <a href="spatial-partition.html">Spatial
+Partitioning</a> speeds up the virtual world and its
+inhabitants&#8217; arrangement in space.</p>
 <h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
 <ul>
 <li><a href="data-locality.html">Data Locality</a></li>
