--- a/html/game-loop.html
+++ b/html/game-loop.html
@@ -259,7 +259,7 @@ slower there.</p>
 <p>The first variation we&#8217;ll look at adds a simple fix. Say you want your game to
 run at 60 FPS. That gives you about <span name="16">16</span> milliseconds per
 frame. As long as you can reliably do all of your game processing and rendering
-in less than that time, you can run at a steady frame rate. All you do process
+in less than that time, you can run at a steady frame rate. All you do is process
 the frame and then <em>wait</em> until it&#8217;s time for the next one, like so:</p>
 <p><img src="images/game-loop-simple.png"/></p>
 <p>The code looks a bit like this:</p>
