Fix a few typos.

--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -85,7 +85,7 @@ never leaves the starting line.</p>
 <p>Before you can change the code to add a new feature, to fix a bug, or for whatever
 reason caused you to fire up your editor, you have to understand what the
 existing code is doing. You don&#8217;t have to know the whole program, of course, but
-you need to <span name="ocr">load</aside> all of the relevant pieces of it into
+you need to <span name="ocr">load</span> all of the relevant pieces of it into
 your primate brain.</p>
 <aside name="ocr">
 
