--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -213,7 +213,7 @@ Instead, a common approach is to use an enum for terrain types:</p>
 
 
 <p>Then the world maintains a huge grid of those:</p>
-<p><span name="grid"></aside></p>
+<p><span name="grid"></span></p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">World</span>
 <span class="p">{</span>
 <span class="nl">private:</span>
