--- a/html/observer.html
+++ b/html/observer.html
@@ -255,7 +255,7 @@ the subject.</p>
 
 <aside name="concurrent">
 
-<p>Note that this code assumes observers don&#8217;t modify the list in their <code>onNotify</code>
+<p>Note that this code assumes observers don&#8217;t modify the list in their <code>onNotify()</code>
 methods. A more robust implementation would either prevent or gracefully handle
 concurrent modification like that.</p>
 </aside>
