--- a/html/prototype.html
+++ b/html/prototype.html
@@ -450,7 +450,7 @@ class-based languages than with prototypal ones. One hint that JavaScript has
 taken steps away from Self is that the core operation in a prototype-based
 language, <em>cloning</em>, is nowhere to be seen. There is no method to clone an
 object in JavaScript.</p>
-<p>The closest it has is <code>Object.create</code>, which lets you create a new object that
+<p>The closest it has is <code>Object.create()</code>, which lets you create a new object that
 delegates to an existing one. Even that wasn&#8217;t added until ECMAScript 5,
 fourteen years after JavaScript came out. Instead of cloning, let me walk you
 through the typical way you define types and create objects in JavaScript. You
